--- a/style.css
+++ b/style.css
@@ -16,14 +16,29 @@ body
     min-height: 100vh;
     background: #010615;
 }
+header{
+    height: 65px;
+    width: 100%;
+    background-color: rgba(134, 73, 116, 0.9);
+    /* Ubah position ke fixed, dan top ke 0 */
+    position: fixed;
+    top: 0;
+    z-index: 10;
+} h1{
+    font-family: "Poppins", sans-serif;
+    font-size: 40px;
+    text-align: center;
+    display: block;
+}
+
 .box
 {
     position: relative;
     width: 300px;
     height: 300px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     margin: 40px;
     background: #060c21;
     transition: 0.5s;
@@ -89,6 +104,36 @@ body
 .box:nth-child(3):after
 {
     background: linear-gradient(235deg,#772aff,#010615,#2196F3);
+}
+.box:nth-child(4):before,
+.box:nth-child(4):after
+{
+    background: linear-gradient(235deg,#ff2a4e,#010615,#21f321);
+}
+.box:nth-child(5):before,
+.box:nth-child(5):after
+{
+    background: linear-gradient(235deg,#d8ff2a,#010615,#f32156);
+}
+.box:nth-child(6):before,
+.box:nth-child(6):after
+{
+    background: linear-gradient(235deg,#2acdff,#010615,#f3213d);
+}
+.box:nth-child(7):before,
+.box:nth-child(7):after
+{
+    background: linear-gradient(235deg,#772aff,#010615,#2196F3);
+}
+.box:nth-child(8):before,
+.box:nth-child(8):after
+{
+    background: linear-gradient(235deg,#2aff58,#010615,#7c21f3);
+}
+.box:nth-child(9):before,
+.box:nth-child(9):after
+{
+    background: linear-gradient(235deg,#ff2ae3,#111c3b,#f36e21);
 }
 .box .content
 {
